--- a/2.Genre Insights .ipynb
+++ b/2.Genre Insights .ipynb
@@ -65,13 +65,9 @@
     }
    ],
    "source": [
-    "#Solution\n",
-    "\n",
-    "# File paths\n",
     "movies_file = r'C:\\Users\\Admin\\Documents\\ml-1m[1]\\ml-1m\\movies.dat'\n",
     "ratings_file = r'C:\\Users\\Admin\\Documents\\ml-1m[1]\\ml-1m\\ratings.dat'\n",
     "\n",
-    "#create a mapping of movie IDs to genres\n",
     "movie_genres = {}\n",
     "\n",
     "with open(movies_file, 'r', encoding='latin-1') as movies:\n",
@@ -81,7 +77,6 @@
     "        genres_list = genres.split('|')\n",
     "        movie_genres[int(movie_id)] = genres_list\n",
     "\n",
-    "#calculate total ratings and counts per genre\n",
     "genre_ratings = {}\n",
     "genre_counts = {}\n",
     "\n",
@@ -92,37 +87,33 @@
     "        movie_id = int(movie_id)\n",
     "        rating = int(rating)\n",
     "        \n",
-    "    
     "        if movie_id in movie_genres:\n",
     "            for genre in movie_genres[movie_id]:\n",
-    "                
     "                if genre not in genre_ratings:\n",
     "                    genre_ratings[genre] = 0\n",
     "                    genre_counts[genre] = 0\n",
-    "                \n",
-    "                
     "                genre_ratings[genre] += rating\n",
     "                genre_counts[genre] += 1\n",
     "\n",
-    "#Calculate average ratings per genre\n",
     "genre_averages = {}\n",
     "for genre in genre_ratings:\n",
     "    genre_averages[genre] = genre_ratings[genre] / genre_counts[genre]\n",
     "\n",
-    "#Sort genres by total ratings count\n",
     "sorted_genres_by_count = sorted(genre_counts.items(), key=lambda x: x[1], reverse=True)\n",
     "\n",
-    "#Sort genres by average rating\n",
     "sorted_genres_by_avg = sorted(genre_averages.items(), key=lambda x: x[1], reverse=True)\n",
     "\n",
-    
     "print(\"Most Frequently Rated Genres:\")\n",
     "for genre, count in sorted_genres_by_count:\n",
     "    print(f\"{genre}: {count} ratings\")\n",
     "\n",
     "print(\"\\nAverage Ratings by Genre:\")\n",
     "for genre, avg_rating in sorted_genres_by_avg:\n",
-    "    print(f\"{genre}: {avg_rating:.2f} average rating\")"
+    "    print(f\"{genre}: {avg_rating:.2f} average rating\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "      "
    ]
   },
   {
