--- a/3.User Engagement Analysis .ipynb
+++ b/3.User Engagement Analysis .ipynb
@@ -195,8 +195,7 @@
     "ratings_file = r'C:\\Users\\Admin\\Documents\\ml-1m[1]\\ml-1m\\ratings.dat'\n",
     "users_file = r'C:\\Users\\Admin\\Documents\\ml-1m[1]\\ml-1m\\users.dat'\n",
     "\n",
-    "# Step 1: Parse users.dat to create a mapping of user IDs to demographic attributes\n",
-    "user_demographics = {}  # {user_id: (gender, age, occupation)}\n",
+    "user_demographics = {}  \n",
     "\n",
     "with open(users_file, 'r', encoding='latin-1') as users:\n",
     "    for line in users:\n",
@@ -204,8 +203,7 @@
     "        user_id, gender, age, occupation, zip_code = line.split('::')\n",
     "        user_demographics[int(user_id)] = (gender, int(age), int(occupation))\n",
     "\n",
-    "# Step 2: Parse movies.dat to create a mapping of movie IDs to genres\n",
-    "movie_genres = {}  # {movie_id: [genres]}\n",
+    "movie_genres = {}  \n",
     "\n",
     "with open(movies_file, 'r', encoding='latin-1') as movies:\n",
     "    for line in movies:\n",
@@ -214,36 +212,30 @@
     "        genres_list = genres.split('|')\n",
     "        movie_genres[int(movie_id)] = genres_list\n",
     "\n",
-    "# Step 3: Parse ratings.dat to calculate engagement by demographics\n",
-    "occupation_ratings_count = {}  # {occupation: total_ratings_count}\n",
-    "gender_rating_distribution = {\"M\": 0, \"F\": 0}  # {gender: total_ratings_count}\n",
-    "age_rating_distribution = {}  # {age_group: total_ratings_count}\n",
-    "genre_preferences = {}  # {occupation: {genre: count}}\n",
+    "occupation_ratings_count = {} \n",
+    "gender_rating_distribution = {\"M\": 0, \"F\": 0} \n",
+    "age_rating_distribution = {} \n",
+    "genre_preferences = {} \n",
     "\n",
     "with open(ratings_file, 'r') as ratings:\n",
     "    for line in ratings:\n",
     "        line = line.strip()\n",
     "        user_id, movie_id, rating, timestamp = map(int, line.split('::'))\n",
     "\n",
-    "        # User demographic information\n",
     "        if user_id in user_demographics:\n",
     "            gender, age, occupation = user_demographics[user_id]\n",
     "\n",
-    "            # Update occupation ratings count\n",
     "            if occupation not in occupation_ratings_count:\n",
     "                occupation_ratings_count[occupation] = 0\n",
     "            occupation_ratings_count[occupation] += 1\n",
     "\n",
-    "            # Update gender ratings distribution\n",
     "            gender_rating_distribution[gender] += 1\n",
     "\n",
-    "            # Update age group ratings count\n",
-    "            age_group = age // 10 * 10  # Group ages by decade\n",
+    "            age_group = age // 10 * 10\n",
     "            if age_group not in age_rating_distribution:\n",
     "                age_rating_distribution[age_group] = 0\n",
     "            age_rating_distribution[age_group] += 1\n",
     "\n",
-    "            # Update genre preferences for this occupation\n",
     "            if movie_id in movie_genres:\n",
     "                if occupation not in genre_preferences:\n",
     "                    genre_preferences[occupation] = {}\n",
@@ -252,10 +244,8 @@
     "                        genre_preferences[occupation][genre] = 0\n",
     "                    genre_preferences[occupation][genre] += 1\n",
     "\n",
-    "# Step 4: Identify the most active professions\n",
     "most_active_professions = sorted(occupation_ratings_count.items(), key=lambda x: x[1], reverse=True)\n",
     "\n",
-    "# Step 5: Display results\n",
     "print(\"Most Active Professions:\")\n",
     "for occupation, count in most_active_professions:\n",
     "    print(f\"Profession {occupation}: {count} ratings\")\n",
@@ -272,8 +262,8 @@
     "for occupation, genres in genre_preferences.items():\n",
     "    print(f\"Profession {occupation}:\")\n",
     "    sorted_genres = sorted(genres.items(), key=lambda x: x[1], reverse=True)\n",
-    "    for genre, count in sorted_genres[:5]:  # Top 5 genres for each profession\n",
-    "        print(f\"  {genre}: {count} ratings\")"
+    "    for genre, count in sorted_genres[:5]:\n",
+    "        print(f\"  {genre}: {count} ratings\")\n"
    ]
   },
   {
