--- a/4. Rating Distribution by Demographics .ipynb
+++ b/4. Rating Distribution by Demographics .ipynb
@@ -2536,25 +2536,20 @@
     }
    ],
    "source": [
-    "#Solution\n",
-    "\n",
-    "# File paths\n",
     "movies_file = r'C:\\Users\\Admin\\Documents\\ml-1m[1]\\ml-1m\\movies.dat'\n",
     "ratings_file = r'C:\\Users\\Admin\\Documents\\ml-1m[1]\\ml-1m\\ratings.dat'\n",
     "users_file = r'C:\\Users\\Admin\\Documents\\ml-1m[1]\\ml-1m\\users.dat'\n",
     "\n",
-    "# Step 1: Parse users.dat to create a mapping of user IDs to demographics\n",
-    "user_demographics = {}  # {user_id: (gender, age_group, occupation)}\n",
+    "user_demographics = {}\n",
     "\n",
     "with open(users_file, 'r', encoding='latin-1') as users:\n",
     "    for line in users:\n",
     "        line = line.strip()\n",
     "        user_id, gender, age, occupation, zip_code = line.split('::')\n",
-    "        age_group = int(age) // 10 * 10  # Group ages by decade\n",
+    "        age_group = int(age) // 10 * 10\n",
     "        user_demographics[int(user_id)] = (gender, age_group, int(occupation))\n",
     "\n",
-    "# Step 2: Parse movies.dat to create a mapping of movie IDs to genres\n",
-    "movie_genres = {}  # {movie_id: [genres]}\n",
+    "movie_genres = {}\n",
     "\n",
     "with open(movies_file, 'r', encoding='latin-1') as movies:\n",
     "    for line in movies:\n",
@@ -2563,16 +2558,14 @@
     "        genres_list = genres.split('|')\n",
     "        movie_genres[int(movie_id)] = genres_list\n",
     "\n",
-    "# Step 3: Parse ratings.dat and calculate demographic-based rating distributions\n",
-    "demographic_rating_distribution = {}  # {(gender, age_group, occupation): {rating_level: count}}\n",
-    "demographic_genre_preferences = {}  # {(gender, age_group, occupation): {genre: count}}\n",
+    "demographic_rating_distribution = {}\n",
+    "demographic_genre_preferences = {}\n",
     "\n",
     "with open(ratings_file, 'r') as ratings:\n",
     "    for line in ratings:\n",
     "        line = line.strip()\n",
     "        user_id, movie_id, rating, timestamp = map(int, line.split('::'))\n",
     "\n",
-    "        # Determine rating level\n",
     "        if rating == 5:\n",
     "            rating_level = 'High'\n",
     "        elif rating in [3, 4]:\n",
@@ -2580,17 +2573,14 @@
     "        else:\n",
     "            rating_level = 'Low'\n",
     "\n",
-    "        # Get user demographics\n",
     "        if user_id in user_demographics:\n",
     "            gender, age_group, occupation = user_demographics[user_id]\n",
     "\n",
-    "            # Initialize demographic rating distribution\n",
     "            key = (gender, age_group, occupation)\n",
     "            if key not in demographic_rating_distribution:\n",
     "                demographic_rating_distribution[key] = {'High': 0, 'Medium': 0, 'Low': 0}\n",
     "            demographic_rating_distribution[key][rating_level] += 1\n",
     "\n",
-    "            # Initialize demographic genre preferences\n",
     "            if movie_id in movie_genres:\n",
     "                if key not in demographic_genre_preferences:\n",
     "                    demographic_genre_preferences[key] = {}\n",
@@ -2599,7 +2589,6 @@
     "                        demographic_genre_preferences[key][genre] = 0\n",
     "                    demographic_genre_preferences[key][genre] += 1\n",
     "\n",
-    "# Step 4: Output results\n",
     "print(\"Rating Distribution by Demographics:\")\n",
     "for demographic, ratings in demographic_rating_distribution.items():\n",
     "    gender, age_group, occupation = demographic\n",
@@ -2614,10 +2603,10 @@
     "for demographic, genres in demographic_genre_preferences.items():\n",
     "    gender, age_group, occupation = demographic\n",
     "    print(f\"Gender: {gender}, Age Group: {age_group}s, Occupation: {occupation}\")\n",
-    "    sorted_genres = sorted(genres.items(), key=lambda x: x[1], reverse=True)[:5]  # Top 5 genres\n",
+    "    sorted_genres = sorted(genres.items(), key=lambda x: x[1], reverse=True)[:5]\n",
     "    for genre, count in sorted_genres:\n",
     "        print(f\"  {genre}: {count} ratings\")\n",
-    "    print()"
+    "    print()\n"
    ]
   },
   {
