--- a/5. Top Performers .ipynb
+++ b/5. Top Performers .ipynb
@@ -57,23 +57,19 @@
     }
    ],
    "source": [
-    "#Solution\n",
-    "\n",
-    "# File paths\n",
     "movies_file = r'C:\\Users\\Admin\\Documents\\ml-1m[1]\\ml-1m\\movies.dat'\n",
     "ratings_file = r'C:\\Users\\Admin\\Documents\\ml-1m[1]\\ml-1m\\ratings.dat'\n",
     "\n",
-    "movie_details = {}  # {movie_id: (title, release_year, genres)}\n",
+    "movie_details = {}\n",
     "\n",
     "with open(movies_file, 'r', encoding='latin-1') as movies:\n",
     "    for line in movies:\n",
     "        line = line.strip()\n",
     "        movie_id, title, genres = line.split('::')\n",
-    "        release_year = int(title.strip()[-5:-1])  # Extract release year from title\n",
+    "        release_year = int(title.strip()[-5:-1])\n",
     "        movie_details[int(movie_id)] = (title, release_year, genres)\n",
     "\n",
-    "# Step 2: Parse ratings.dat and calculate movie-wise ratings\n",
-    "movie_ratings = {}  # {movie_id: [ratings]}\n",
+    "movie_ratings = {}\n",
     "\n",
     "with open(ratings_file, 'r') as ratings:\n",
     "    for line in ratings:\n",
@@ -84,30 +80,27 @@
     "            movie_ratings[movie_id] = []\n",
     "        movie_ratings[movie_id].append(rating)\n",
     "\n",
-    "# Step 3: Calculate average ratings for each movie\n",
-    "average_ratings = {}  # {movie_id: (average_rating, num_ratings)}\n",
+    "average_ratings = {}\n",
     "\n",
     "for movie_id, ratings in movie_ratings.items():\n",
     "    num_ratings = len(ratings)\n",
     "    average_rating = sum(ratings) / num_ratings\n",
     "    average_ratings[movie_id] = (average_rating, num_ratings)\n",
     "\n",
-    "# Step 4: Filter movies with a minimum number of ratings (e.g., 50) and sort by average rating\n",
     "min_ratings = 50\n",
     "filtered_movies = {\n",
     "    movie_id: (avg_rating, num_ratings)\n",
     "    for movie_id, (avg_rating, num_ratings) in average_ratings.items()\n",
     "    if num_ratings >= min_ratings\n",
     "}\n",
-    "top_movies = sorted(filtered_movies.items(), key=lambda x: x[1][0], reverse=True)[:10]  # Top 10\n",
+    "top_movies = sorted(filtered_movies.items(), key=lambda x: x[1][0], reverse=True)[:10]\n",
     "\n",
-    "# Step 5: Output results\n",
     "print(\"Top 10 Movies by Average Rating (Minimum 50 Ratings):\")\n",
     "for movie_id, (avg_rating, num_ratings) in top_movies:\n",
     "    title, release_year, genres = movie_details[movie_id]\n",
     "    print(f\"Title: {title}, Year: {release_year}, Genres: {genres}\")\n",
     "    print(f\"  Average Rating: {avg_rating:.2f}, Number of Ratings: {num_ratings}\")\n",
-    "    print()"
+    "    print()\n"
    ]
   },
   {
