--- a/6. Exploring Long Tail .ipynb
+++ b/6. Exploring Long Tail .ipynb
@@ -57,24 +57,19 @@
     }
    ],
    "source": [
-    "#Solution\n",
-    "\n",
-    "# File paths\n",
     "movies_file = r'C:\\Users\\Admin\\Documents\\ml-1m[1]\\ml-1m\\movies.dat'\n",
     "ratings_file = r'C:\\Users\\Admin\\Documents\\ml-1m[1]\\ml-1m\\ratings.dat'\n",
     "\n",
-    "# Step 1: Parse movies.dat to create a mapping of movie IDs to details\n",
-    "movie_details = {}  # {movie_id: (title, release_year, genres)}\n",
+    "movie_details = {}\n",
     "\n",
     "with open(movies_file, 'r', encoding='latin-1') as movies:\n",
     "    for line in movies:\n",
     "        line = line.strip()\n",
     "        movie_id, title, genres = line.split('::')\n",
-    "        release_year = int(title.strip()[-5:-1])  # Extract release year from title\n",
+    "        release_year = int(title.strip()[-5:-1])\n",
     "        movie_details[int(movie_id)] = (title, release_year, genres)\n",
     "\n",
-    "# Step 2: Parse ratings.dat and count ratings for each movie\n",
-    "movie_ratings_count = {}  # {movie_id: count}\n",
+    "movie_ratings_count = {}\n",
     "\n",
     "with open(ratings_file, 'r') as ratings:\n",
     "    for line in ratings:\n",
@@ -85,8 +80,7 @@
     "            movie_ratings_count[movie_id] = 0\n",
     "        movie_ratings_count[movie_id] += 1\n",
     "\n",
-    "# Step 3: Categorize movies by rating count\n",
-    "low_rating_threshold = 10  # Define the threshold for \"few ratings\"\n",
+    "low_rating_threshold = 10\n",
     "low_rated_movies = []\n",
     "popular_movies = []\n",
     "\n",
@@ -96,7 +90,6 @@
     "    else:\n",
     "        popular_movies.append(movie_id)\n",
     "\n",
-    "# Step 4: Analyze characteristics of less-rated and popular movies\n",
     "def analyze_movie_characteristics(movie_ids):\n",
     "    genre_count = {}\n",
     "    year_count = {}\n",
@@ -104,25 +97,19 @@
     "\n",
     "    for movie_id in movie_ids:\n",
     "        title, release_year, genres = movie_details[movie_id]\n",
-    "        # Count genres\n",
     "        for genre in genres.split('|'):\n",
     "            if genre not in genre_count:\n",
     "                genre_count[genre] = 0\n",
     "            genre_count[genre] += 1\n",
-    "        # Count release years\n",
     "        if release_year not in year_count:\n",
     "            year_count[release_year] = 0\n",
     "        year_count[release_year] += 1\n",
     "\n",
     "    return genre_count, year_count, total_movies\n",
     "\n",
-    "# Analyze less-rated movies\n",
     "low_rated_genres, low_rated_years, total_low_rated = analyze_movie_characteristics(low_rated_movies)\n",
-    "\n",
-    "# Analyze popular movies\n",
     "popular_genres, popular_years, total_popular = analyze_movie_characteristics(popular_movies)\n",
     "\n",
-    "# Step 5: Output Results\n",
     "print(f\"Total Movies: {len(movie_details)}\")\n",
     "print(f\"Movies with Fewer than {low_rating_threshold} Ratings: {total_low_rated}\")\n",
     "print(f\"Movies with {low_rating_threshold} or More Ratings: {total_popular}\")\n",
@@ -141,7 +128,7 @@
     "    print(f\"{genre}: {count} movies\")\n",
     "print(\"Top Release Years:\")\n",
     "for year, count in sorted(popular_years.items(), key=lambda x: x[1], reverse=True)[:5]:\n",
-    "    print(f\"{year}: {count} movies\")"
+    "    print(f\"{year}: {count} movies\")\n"
    ]
   },
   {
