--- a/7. Tag Analysis .ipynb
+++ b/7. Tag Analysis .ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "a15762cd-b6f6-4d82-b6fb-8897d105ecba",
    "metadata": {},
    "outputs": [
@@ -173,16 +173,11 @@
     }
    ],
    "source": [
-    "#Solution\n",
-    "\n",
-    "\n",
-    "# File paths\n",
     "movies_file = r'C:\\Users\\Admin\\Documents\\ml-1m[1]\\ml-1m\\movies.dat'\n",
     "ratings_file = r'C:\\Users\\Admin\\Documents\\ml-1m[1]\\ml-1m\\ratings.dat'\n",
     "\n",
-    "# Step 1: Parse movies.dat to extract genres\n",
-    "genre_count = {}  # {genre: count}\n",
-    "movie_genres = {}  # {movie_id: [genres]}\n",
+    "genre_count = {}\n",
+    "movie_genres = {}\n",
     "\n",
     "with open(movies_file, \"r\", encoding=\"latin-1\") as movies:\n",
     "    for line in movies:\n",
@@ -196,8 +191,7 @@
     "            else:\n",
     "                genre_count[genre] = 1\n",
     "\n",
-    "# Step 2: Parse ratings.dat to link movies with ratings\n",
-    "genre_ratings = {}  # {genre: {rating: count}}\n",
+    "genre_ratings = {}\n",
     "\n",
     "with open(ratings_file, \"r\") as ratings:\n",
     "    for line in ratings:\n",
@@ -210,13 +204,11 @@
     "                    genre_ratings[genre] = {1: 0, 2: 0, 3: 0, 4: 0, 5: 0}\n",
     "                genre_ratings[genre][rating] += 1\n",
     "\n",
-    "# Step 3: Display most frequent genres\n",
     "print(\"Most Frequent Tags:\")\n",
     "sorted_genres = sorted(genre_count.items(), key=lambda x: x[1], reverse=True)\n",
     "for genre, count in sorted_genres:\n",
     "    print(f\"Genre: {genre}, Count: {count}\")\n",
     "\n",
-    "# Step 4: Display genre-rating consistency\n",
     "print(\"\\nGenre-Rating Consistency:\")\n",
     "for genre, ratings in genre_ratings.items():\n",
     "    total_ratings = sum(ratings.values())\n",
@@ -224,6 +216,7 @@
     "    for rating, count in ratings.items():\n",
     "        percentage = (count / total_ratings) * 100 if total_ratings > 0 else 0\n",
     "        print(f\"  Rating {rating}: {percentage:.2f}% ({count} ratings)\")\n",
+    "\n",
     "\n"
    ]
   },
